Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).
TODO: unready_all
TODO: myhttpd header parsing
TODO: channel->maxsize(newsize)?

5.2   Sun Oct  4 14:54:24 CEST 2009
        - Coro::Storable destroyed the prototypes of the functions it wrapped.
        - export rouse_cb and rouse_wait by default now.
        - fix various prototype mismatches in Coro::AnyEvent and Coro::Handle.
        - new method $state->swap_sv.
        - added section on "windows process emulation" to the manpage,
          after a not-so-fruitful (nor-friendly) "discussion" with chip
          salzenberg (discussion implies arguments, but his only arguments
          were ad-hominems, one wonders why he started it in the first
          place). I hope this explains it well enough for him to understand,
          and maybe well enough for others to understand.
        - use common::sense everywhere now.
        - idle callbacks are no longer supported, use idle coros instead.
        - print a thread listing when a deadlock is detected.

5.17  Sat Aug 22 23:09:31 CEST 2009
	- work around a bug in the perl debugger causing crashes
          when running under the debugger by marking _pool_handler as nodebug.
	- speed up Coro::async considerably.
        - try some hacks to get netbsd to work "more often" - their broken
          setjmp/longjmp, ucontext *and* phtreads are really hard on Coro.
        - convert Coro to AE 5.0 API.

5.162 Tue Jul 28 04:04:03 CEST 2009
	- perl 5.8.2 is now minimum requirement.
        - skip t/19_handle.t on broken windows perls.

5.161 Wed Jul 22 04:47:38 CEST 2009
	- Coro::AnyEvent::poll could have a different prototype when EV was
          used as backend (analyzed by Tatsuhiko Miyagawa).